<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_horizontal"
    android:gravity="center|top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

        <VideoView android:id="@+id/videoPlayer"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_width="575dp" />

        <LinearLayout
            android:layout_gravity="top|center"
            android:gravity="top"
            android:layout_marginTop="300dp"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"

            >
                <TextView
                    android:id="@+id/num1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/num1"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/sym"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/sym"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/num2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/num2"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="38sp"/>


                <TextView
                    android:id="@+id/questionm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/questionm"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="38sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:gravity="top"
            android:layout_marginTop="400dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            >


                <Button
                    android:id="@+id/answer1"
                    style="@style/lvlbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1"
                    android:onClick="answer1"
                    android:textSize="25sp"
                    android:text="@string/answer1"
                    android:textColor="@color/colorWhite"

                    />

                <Button
                    android:id="@+id/answer2"
                    style="@style/lvlbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_marginBottom="30dp"
                    android:onClick="answer2"
                    android:text="@string/answer2"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/answer3"
                    style="@style/lvlbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_marginBottom="30dp"

                    android:onClick="answer3"
                    android:text="@string/answer3"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/answer4"
                    style="@style/lvlbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_marginBottom="30dp"
                    android:onClick="answer4"
                    android:text="@string/answer4"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    />

        </LinearLayout>
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_gravity="center"
            android:text=""
            android:textColor="@color/colorRed1"
            android:textStyle="bold"
            android:textSize="38sp" />
</FrameLayout>

