<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:layout_marginTop="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray"

    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="300dp"
        android:layout_gravity="top"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:textColor="@color/colorGray"


        >

        <TextView
            android:id="@+id/recordstitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="7dp"
            android:gravity="bottom"
            android:textColor="@color/colorBlue1"

            android:text="@string/records"

            android:textSize="30sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="300dp"
        android:layout_gravity="top"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:textColor="@color/colorGray"


        >
        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="7dp"

            android:gravity="center_horizontal"
            android:textColor="@color/colorBlue1"


            android:text="@string/question"

            android:textSize="30sp"
            android:textStyle="normal" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="300dp"
        android:layout_gravity="top"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:textColor="@color/colorWhite"


        >

        <Button
            android:id="@+id/answerNO"
            style="@style/lvlbutton"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"


            android:text="@string/answerNO"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/answerYES"
            style="@style/lvlbutton"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"


            android:text="@string/answerYES"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            />

    </LinearLayout>



</LinearLayout>