<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:layout_marginTop="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:layout_gravity="center_horizontal"
        style="@style/lvlbutton"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        android:background="@color/colorBlue1"

        >
        <TextView
            android:id="@+id/settingtitle"
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="7dp"
            android:text="@string/settingtitle"
            android:textColor="@color/colorWhite"
            android:textStyle="normal"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="top"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        tools:ignore="ExtraText">
        <Button
            android:id="@+id/lvl1"
            style="@style/lvlbutton"
            android:layout_height="70dp"
            android:width="250dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:onClick="lvl1"
            android:text="@string/lvl1"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:layout_width="0dp"


            />
        <!--android:background="@color/colorBlue1"-->
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:layout_weight="1"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/lvl2"
            style="@style/lvlbutton"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:onClick="lvl2"
            android:text="@string/lvl2"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"

        />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:layout_weight="1"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/lvl3"
            style="@style/lvlbutton"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:onClick="lvl3"
            android:text="@string/lvl3"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            />
    </LinearLayout>

</LinearLayout>


